[!] Cart page: 'Clear cart' link was wrapped. Fixed

--- a/src/skins/default/en/css/lc.css
+++ b/src/skins/default/en/css/lc.css
@@ -1674,7 +1674,7 @@ table.including-modifiers td.value {
 
 #shopping-cart .cart-buttons {
   float: left;
-  width: 49%;
+  width: 69%;
 }
 
 #shopping-cart .cart-buttons form div {
@@ -1689,7 +1689,7 @@ table.including-modifiers td.value {
 
 #shopping-cart .sums {
   float: right;
-  width: 49%;
+  width: 29%;
   text-align: right;
   padding: 0px;
   margin: 0px;
